--- a/_posts/2020-07-24-db-datax.md
+++ b/_posts/2020-07-24-db-datax.md
@@ -15,6 +15,8 @@ datax 使用python 和 java 同步数据
 
 可分配的内存比JVM运行的内存少, 需要减少JVM运行内存
 
+python datax.py  --jvm="-Xms5G -Xmx5G" ../job/test.json
+
 ### JDBC Driver 版本低的问题
 
 datax mysql插件使用 mysql-connector-java-5.1.34
